--- a/requests.config
+++ b/requests.config
@@ -1,8 +1,8 @@
-Username|:
-Password|:
-Address|:7908 Long Beach Boulevard, Harvey Cedars, NJ 08008
-Date|:09/03/2021
+Username|:jinqiran@yahoo.com
+Password|:jinq9706!8
+Address|:679 Greenwich St, New York, NY 10014
+Date|:06/08/2022
 Desired Seating Time|:19:15
-Earliest Acceptable Seating Time|:18:45
-Latest Acceptable Seating Time|:20:15
-Guests|:4
+Earliest Acceptable Seating Time|:18:30
+Latest Acceptable Seating Time|:21:15
+Guests|:2
